fix: coverage report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,12 @@
 sonar.projectKey=TipsyTakeDown
+
+# Python Coverage Report
+sonar.python.coverage.reportPaths=coverage.xml
+
+sonar.sources=www
+
+# Test code directories
+sonar.tests=www
+
+# Test code inclusion patterns
+sonar.test.inclusions=**/*_test.py
