--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -54,6 +54,7 @@ jobs:
       - name: 
         run: |
           coverage run -m pytest
+          coverage xml
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
