--- a/db/flyway/flyway.conf
+++ b/db/flyway/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://db:5432/todolist
+flyway.url=jdbc:postgresql://tipsy_db:5432/tipsy_db
 flyway.user=db_user
 flyway.password=1P@ssw0rd2345
 flyway.baselineOnMigrate=false
