feat: ingnore infra

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,6 @@ sonar.tests=www
 
 # Test code inclusion patterns
 sonar.test.inclusions=**/*_test.py
+
+# Exclude files 
+sonar.coverage.exclusions=**/__init__.py,www/app.py,www/gunicorn_config.py
