--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -1,3 +1,4 @@
+authlib==1.3.1
 autopep8==2.3.1
 flask==3.0.3
 gunicorn==22.0.0
@@ -5,4 +6,3 @@ mmp==0.1.0
 psycopg2-binary==2.9.9
 pytest-cov==5.0.0
 pytest==8.2.2
-sqlalchemy==2.0.31
