--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -1,8 +1,8 @@
 asyncio==3.4.3
 autopep8==2.3.1
-boto3==1.34.144
 flask==3.0.3
 gunicorn==22.0.0
+minio==7.2.7
 mmp==0.1.0
 psycopg2-binary==2.9.9
 pytest-cov==5.0.0
