--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -1,4 +1,3 @@
-asyncio==3.4.3
 autopep8==2.3.1
 flask==3.0.3
 gunicorn==22.0.0
@@ -7,4 +6,5 @@ mmp==0.1.0
 psycopg2-binary==2.9.9
 pytest-cov==5.0.0
 pytest==8.2.2
+python-dotenv==1.0.1
 sqlalchemy==2.0.31
