feat: exclude controllers and entity sonarcloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,4 @@ sonar.tests=www
 sonar.test.inclusions=**/*_test.py
 
 # Exclude files 
-sonar.coverage.exclusions=**/__init__.py,www/app.py,www/gunicorn_config.py
+sonar.coverage.exclusions=**/__init__.py,www/app.py,www/gunicorn_config.py,**/entity/*.py,**/controller/*.py
