--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -36,6 +36,7 @@ jobs:
         flake8 ./www --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        export PYTHONPATH=./www
         pytest www/
 
   sonarqube:
