--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -23,6 +23,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12.4"
+    - name: Install ffmpeg
+      run: |
+        apt update && apt install -y ffmpeg
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -48,6 +51,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Install ffmpeg
+        run: |
+          apt update && apt install -y ffmpeg
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
