--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -23,9 +23,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12.4"
-    - name: Install ffmpeg
-      run: |
-        apt update && apt install -y ffmpeg
+    - uses: FedericoCarboni/setup-ffmpeg@v3
+      id: setup-ffmpeg
+      with:
+        ffmpeg-version: release
+        architecture: ''
+        linking-type: static
+        github-token: ${{ github.server_url == 'https://github.com' && github.token || '' }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -51,10 +55,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      
+      - uses: FedericoCarboni/setup-ffmpeg@v3
+        id: setup-ffmpeg
+        with:
+          ffmpeg-version: release
+          architecture: ''
+          linking-type: static
+          github-token: ${{ github.server_url == 'https://github.com' && github.token || '' }}
 
-      - name: Install ffmpeg
-        run: |
-          apt update && apt install -y ffmpeg
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
