--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
   "name": "TipsyTakedown",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "repository": "git@github.com:SoftwareLibreMx/TipsyTakedown.git",
   "license": "GNU",
   "devDependencies": {
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   },
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest"
+  },
+  "dependencies": {},
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ],
+    "rootDir": "www",
+    "testRegex": ".*\\.test\\.js$",
+    "collectCoverageFrom": [
+      "**/*.{!(module),}.(t|j)s"
+    ],
+    "transform": {},
+    "coverageDirectory": "../coverage",
+    "coverageProvider": "v8",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@static/(.*)$": "<rootDir>/webapp/static/$1"
+    }
   }
 }
