--- a/www/.env.example
+++ b/www/.env.example
@@ -2,6 +2,9 @@ MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
 MINIO_BUCKET_NAME=
 MINIO_ENDPOINT=
+GOOGLE_OAUTH_CLIENT_KE=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_REDIRECT_URI=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_HOST=
