--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -1,9 +1,10 @@
 autopep8==2.3.1
 flask==3.0.3
-flask-oauthlib==0.9.6
+google-auth-oauthlib==1.2.1
+google-auth==2.32.0
 gunicorn==22.0.0
 minio==7.2.7
-mmp==0.1.0
+mmp==0.2.1
 psycopg2-binary==2.9.9
 pytest-cov==5.0.0
 pytest==8.2.2
