--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -5,8 +5,10 @@ google-auth==2.32.0
 gunicorn==22.0.0
 minio==7.2.7
 mmp==0.2.1
+PyJWT==2.9.0
 psycopg2-binary==2.9.9
 pytest-cov==5.0.0
 pytest==8.2.2
 python-dotenv==1.0.1
 sqlalchemy==2.0.31
+
