--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -1,6 +1,8 @@
 autopep8==2.3.1
+bcrypt==4.2.0
 flask==3.0.3
 gunicorn==22.0.0
+mercadopago==2.2.3
 minio==7.2.7
 mmp==0.1.0
 psycopg2-binary==2.9.9
