--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -1,8 +1,11 @@
 autopep8==2.3.1
 bcrypt==4.2.0
 flask==3.0.3
+google-api-core==2.19.1
 google-auth-oauthlib==1.2.1
+google-api-python-client==2.140.0
 google-auth==2.32.0
+google-auth-httplib2==0.2.0
 gunicorn==22.0.0
 mercadopago==2.2.3
 minio==7.2.7
