--- a/www/requirements.txt
+++ b/www/requirements.txt
@@ -1,4 +1,3 @@
-
 PyJWT==2.9.0
 autopep8==2.3.1
 bcrypt==4.2.0
@@ -18,3 +17,4 @@ pytest-cov==5.0.0
 pytest==8.2.2
 python-dotenv==1.0.1
 sqlalchemy==2.0.31
+stripe==10.8.0
